@@ -1,3 +1,7 @@
+2017-02-22 Magnus Hagdorn
+ * piccolo2/client/PiccoloBaseClient.py: the client requests and stores a 
+   listener ID which is used for client specific messages
+ 
 2017-02-14 Magnus Hagdorn
  * piccolo2/client/PiccoloBaseClient.py: when requesting status turn result 
    into a status object
